# burn-nerf-guided-splats

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
src/: hybrid.rs  lib.rs  main.rs  training.rs  utils.rs  wasm.rs
src/model/: gaussian.rs  mod.rs  nerf.rs
web/: index.html  index.js  style.css
web/pkg/: README.md  burn_nerf_guided_splats.d.ts  burn_nerf_guided_splats.js  burn_nerf_guided_splats_bg.wasm.d.ts  package.json
